...
import { ValidatorStatus } from '@/src/components/ValidatorStatus'
import { ValidatorRow } from '@/src/components/ValidatorRow'

const CURRENCY = 'USD'

export const stakingTypeToLabel = {
  NativeStakingDeposit: 'Deposit',
  NativeStakingValidatorsExit: 'Withdraw request',
  NativeStakingWithdraw: 'Claim',
} as const

export const formatStakingDepositItems = (
  txInfo: NativeStakingDepositTransactionInfo,
...
