appId: global.safe.mobileapp.ios
---
# ===========================================
# Settings Change Transaction Card
# ===========================================
- assertVisible:
    text: 'Settings change'

- assertVisible:
    text: '.*addOwnerWithThreshold.*'
    optional: true

- tapOn:
    text: '.*addOwnerWithThreshold.*'

- runFlow:
    file: ./settings-tx.yml

- tapOn:
    id: 'go-back'
