appId: ${APP_ID}
tags:
  - util
---
- runScript:
    file: ../../../utils/scripts/defaults.js
# ===========================================
# Disable Module Transaction Card
# ===========================================
- assertVisible:
    text: 'Settings change'

- extendedWaitUntil:
    visible:
      text: '.*disableModule.*'
      optional: true
    timeout: ${output.defaults.extendedWaitUntilTimeout}

- tapOn:
    text: '.*disableModule.*'

- runFlow:
    file: ./disable-module-tx.yml

- tapOn:
    id: 'go-back'
